--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luna Chat</title>
-    <link rel="stylesheet" href="./index.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Luna Chatbot</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
     <div class="chat-wrapper">
-      <div id="chat-container"></div>
-
-      <div id="input-container">
-        <input id="user-input" type="text" placeholder="Talk to Luna..." />
-        <button onclick="sendMessage()">Send</button>
-      </div>
+        <div class="chat-header">
+            <h1>Luna</h1>
+            <label class="dark-mode-toggle">
+                <input type="checkbox" id="dark-mode-toggle" aria-label="Toggle dark mode">
+                <span class="slider"></span>
+            </label>
+        </div>
+        <div id="chat-container"></div>
+        <div id="input-container">
+            <input type="text" id="user-input" placeholder="Type your message..." />
+            <button id="send-button" onclick="sendMessage()">
+                <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="var(--button-text)" stroke-width="2">
+                    <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
+                </svg>
+            </button>
+        </div>
     </div>
     <script src="index.js"></script>
-  </body>
+</body>
 </html>
