first attempt to fix scroll problem

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type="text" id="user-input" placeholder="Type your message..." />
             <button id="send-button" onclick="sendMessage()">
                 <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="var(--button-text)" stroke-width="2">
-                    <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
+                    <path d="M12 19L12 5M5 12L12 5L19 12" />
                 </svg>
             </button>
         </div>
