fix scroll and bottom float

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
                 <span class="slider"></span>
             </label>
         </div>
-        <div id="chat-container"></div>
+        <div id="chat-container">
+            <div id="filler"></div>
+           <!--<div id="bottom-spacer"></div>-->
+        </div>
         <div id="input-container">
             <input type="text" id="user-input" placeholder="Type your message..." />
             <button id="send-button" onclick="sendMessage()">
