--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luna AI</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400&family=Orbitron:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="chat-wrapper">
         <div class="chat-header">
-            <h1>Luna AI</h1>
+            <h1><span class="luna-text">Luna</span> <span class="ai-text">AI</span></h1>
             <label class="dark-mode-toggle">
                 <input type="checkbox" id="dark-mode-toggle">
                 <span class="slider"></span>
             </label>
         </div>
         <div id="chat-container">
-            <div id="filler"></div>
             <div id="bottom-spacer"></div>
             <div id="thinking-indicator">
                 <span class="thinking-dot"></span>
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div id="input-container">
-            <input type="text" id="user-input" placeholder="Ask Luna anything...">
+            <input type="text" id="user-input" placeholder="Type your message...">
             <button id="action-button">
                 <svg id="button-icon" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="var(--button-text)" stroke-width="2">
                     <path d="M12 19L12 5M5 12L12 5L19 12"></path>
@@ -35,7 +35,10 @@
         <div id="status-button-container">
             <div id="ai-status-container">
                 <div class="ai-status">
-                    <span class="ai-icon grok">G</span>
+                    <span class="ai-icon grok">
+                        <img src="/assets/grok-logo.svg" alt="Grok" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';console.log('Grok logo failed to load');">
+                        <span class="text-fallback" style="display: none;">X</span>
+                    </span>
                     <div class="status-squares">
                         <span class="status-square"></span>
                         <span class="status-square"></span>
@@ -43,7 +46,10 @@
                     </div>
                 </div>
                 <div class="ai-status">
-                    <span class="ai-icon gemini">M</span>
+                    <span class="ai-icon gemini">
+                        <img src="/assets/gemini-logo.svg" alt="Gemini" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';console.log('Gemini logo failed to load');">
+                        <span class="text-fallback" style="display: none;">G</span>
+                    </span>
                     <div class="status-squares">
                         <span class="status-square"></span>
                         <span class="status-square"></span>
@@ -51,7 +57,10 @@
                     </div>
                 </div>
                 <div class="ai-status">
-                    <span class="ai-icon openai">O</span>
+                    <span class="ai-icon chatgpt">
+                        <img src="/assets/chatgpt-logo.svg" alt="ChatGPT" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';console.log('ChatGPT logo failed to load');">
+                        <span class="text-fallback" style="display: none;">C</span>
+                    </span>
                     <div class="status-squares">
                         <span class="status-square"></span>
                         <span class="status-square"></span>
@@ -59,6 +68,7 @@
                     </div>
                 </div>
             </div>
+            <div id="filler"></div>
         </div>
     </div>
     <script src="index.js"></script>
