make height 100% and add version footer

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <span class="thinking-dot"></span>
                 <span class="thinking-dot"></span>
             </div>
-
+            <!-- Messages were appended here by JavaScript -->
         </div>
         <div id="input-container">
             <input type="text" id="user-input" placeholder="Type your message...">
             <button id="action-button">
-                <svg id="button-icon" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="var(--button-text)" stroke-width="2">
-                    <path d="M12 19L12 5M5 12L12 5L19 12"></path>
+                <svg id="button-icon" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="white" stroke-width="2">
+                    <path d="M12 19L12 5M5 12L12 5L19 12"/>
                 </svg>
             </button>
         </div>
