--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                 <span class="thinking-dot"></span>
                 <span class="thinking-dot"></span>
             </div>
+            <button id="scroll-to-bottom" class="fixed-button">
+                <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="white" stroke-width="2">
+                    <path d="M12 5v14m0 0l-4-4m4 4l4-4"/>
+                </svg>
+            </button>
             <!-- Messages were appended here by JavaScript -->
         </div>
         <div id="input-container">
