v 1.1.0: add local llm functionality

--- a/index.html
+++ b/index.html
@@ -72,12 +72,24 @@
                         <span class="status-square"></span>
                         <span class="status-square"></span>
                     </div>
+
                 </div>
                 <div class="ai-status">
                     <span class="ai-icon qwen">
                         <img src="/assets/qwen-logo.svg" alt="Qwen" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';console.log('Qwen logo failed to load');">
                         <span class="text-fallback" style="display: none;">Q</span>
                     </span>
+                    <div class="status-squares">
+                        <span class="status-square"></span>
+                        <span class="status-square"></span>
+                        <span class="status-square"></span>
+                    </div>
+                </div>
+                <div class="ai-status">
+                    <span class="ai-icon local">
+                    <img src="/assets/harddrive.svg" alt="Local" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';console.log('Qwen logo failed to load');">
+                    <span class="text-fallback" style="display: none;">L</span>
+                </span>
                     <div class="status-squares">
                         <span class="status-square"></span>
                         <span class="status-square"></span>
