--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400&family=Orbitron:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- <div class="sidebar">
+    <div class="sidebar">
         <button id="new-chat-button">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M12 5v14M5 12h14"/>
           </svg>
         </button>
         <div id="chat-list"></div>
-      </div> -->
+      </div>
 
     <div class="chat-wrapper">
         <div class="chat-header">
